# pydantic-excel

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: trigger_publish_docs.yml
pydantic_excel/: __init__.py  model.py  reader.py  row_model.py  version.py
tests/: test_row_model.py  test_version.py
